[package]
name = "kvlogger"
version = "0.1.0"
description = "A simple human readable key-value logger"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/kvlogger"
license = "MIT"

edition = "2018"

[dependencies]
env_logger = "0.7.1"
log = { version = "0.4.8", features = ["std"] }
colored = "1.9.3"
chrono = "0.4.11"
