[package]
name = "kvlogger"
version = "0.4.0"
description = "A simple human readable key-value logger"
authors = ["Antoine POPINEAU <antoine.popineau@appscho.com>"]
repository = "https://github.com/apognu/kvlogger"
license = "MIT"
readme = "README.md"

edition = "2018"

[dependencies]
env_logger = "0.8.2"
indexmap = "^1.6.1"
log = { version = "0.4.8", features = ["std"] }
colored = "2.0.0"
chrono = { version = "0.4.11", optional = true }

[features]
datetime = ["chrono"]
